# AutoCommit

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  pytest.ini  tmp.md
.github/: README.md
.github/workflows/: ci.yml  publish.yml  release.yml
autocommit/: __init__.py
autocommit/cli/: __init__.py  cli.py
autocommit/core/: __init__.py  ai.py  commit.py  commit_executor.py  config.py  constants.py  diff.py  file_processor.py  files.py  git_repository.py  message_generator.py  patch_utils.py  processor.py  ui_builder.py
autocommit/utils/: __init__.py  console.py  file.py  git.py
debug_patches/: patch_autocommit_core_processor.py_group1.diff  patch_autocommit_utils_console.py_group1.diff
dummy_test_data/: dummy_file_1.txt  dummy_file_2.txt
planning/: Refactor_Plan.md  TODO.md  UI_Future.md  UI_Upgrade.md  UI_Upgrades.md  elite plan.md  p.md
scripts/: README.md  __init__.py  build.py  clean.py  generate_dummy_data.py  list.py  release.py  test.py
tests/: test_autocommit.py  test_commit_lock.py
